--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
 	"author": "lxhzzy",
 	"license": "MIT",
 	"dependencies": {
-		"@minecraft/server": "^1.12.0"
+		"@minecraft/server": "^1.12.0",
+		"form-data": "^4.0.2"
 	},
 	"devDependencies": {
+		"@actions/core": "^1.11.1",
 		"@actions/exec": "^1.1.1",
 		"@actions/github": "^6.0.0",
 		"@actions/http-client": "^2.2.3",
-		"@actions/core": "^1.11.1",
+		"@octokit/rest": "^21.0.2",
 		"@types/libsodium-wrappers": "^0.7.14",
 		"atomic-sleep": "^1.0.0",
+		"axios": "^1.7.7",
+		"compressing": "^1.10.1",
 		"crypto": "^1.0.1",
+		"del": "^7.1.0",
 		"gulp": "^5.0.0",
 		"gulp-zip": "^6.0.0",
 		"langfc": "^1.3.1",
 		"libsodium-wrappers": "^0.7.15",
 		"minimist": "^1.2.8",
 		"tsup": "^8.2.4",
-		"typescript": "^5.5.4",
-		"@octokit/rest": "^21.0.2",
-		"axios": "^1.7.7",
-		"compressing": "^1.10.1",
-		"del": "^7.1.0"
+		"typescript": "^5.5.4"
 	}
 }
-
